--- a/001-image-lazy-loading/index.html
+++ b/001-image-lazy-loading/index.html
@@ -1,27 +1,53 @@
 <html>
-  <head></head>
+  <head>
+    <script src="https://www.guidedtrack.com/assets/jquery_gt.js"></script>
+    <script src="https://www.guidedtrack.com/assets/interpreter.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://www.guidedtrack.com/assets/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="https://www.guidedtrack.com/assets/guidedtrack.css">
+  </head>
   <body>
+    <div aria-live="polite" class="guidedtrack program_container col-md-8 col-md-offset-2" data-environment="production" id="wl6cui9">
+      <div id="program_navigation">
+        <div id="back-button"></div>
+        <div class="navigation_container"></div>
+        <div id="run-menu"></div>
+      </div>
+
+      <div class="points">
+        <div class="total"></div>
+        <div class="change positive"></div>
+      </div>
+
+      <div class="maintain"></div>
+      <div class="main"></div>
+    </div>
+
     <script>
-      let imgs = document.getElementsByTagName("img")
+      function lazyLoadImages(){
+        let imgs = document.getElementsByTagName("img")
 
-      for (let i=0; i<imgs.length; i++){
-        let img = imgs[i]
-        let oldSource = img.src
+        for (let i=0; i<imgs.length; i++){
+          let img = imgs[i]
+          let oldSource = img.src
 
-        img.src = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4/fr1fwAJRwPBz5njQAAAAABJRU5ErkJggg=="
-        img.width = 800
-        img.height = 530
+          img.src = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4/fr1fwAJRwPBz5njQAAAAABJRU5ErkJggg=="
+          img.width = 800
+          img.height = 491
 
-        let temp = new Image()
-        temp.src = oldSource
+          let temp = new Image()
+          temp.src = oldSource
 
-        temp.onload = function(){
-          setTimeout(function(){
-            img.src = oldSource
-            img.height = img.width / (temp.width / temp.height)
-          }, 2000)
+          temp.onload = function(){
+            setTimeout(function(){
+              img.src = oldSource
+              img.removeAttribute("width")
+              img.removeAttribute("height")
+            }, 3000)
+          }
         }
       }
+
+      $(window).on("guidedtrack:pageEnd", lazyLoadImages)
     </script>
   </body>
 </html>
