--- a/001-image-lazy-loading/index.html
+++ b/001-image-lazy-loading/index.html
@@ -23,31 +23,16 @@
     </div>
 
     <script>
-      function lazyLoadImages(){
+      function setDefaultImageSizes(){
         let imgs = document.getElementsByTagName("img")
 
         for (let i=0; i<imgs.length; i++){
           let img = imgs[i]
-          let oldSource = img.src
-
-          img.src = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVQImWN4/fr1fwAJRwPBz5njQAAAAABJRU5ErkJggg=="
-          img.width = 800
-          img.height = 491
-
-          let temp = new Image()
-          temp.src = oldSource
-
-          temp.onload = function(){
-            setTimeout(function(){
-              img.src = oldSource
-              img.removeAttribute("width")
-              img.removeAttribute("height")
-            }, 3000)
-          }
+          img.height = 500
         }
       }
 
-      $(window).on("guidedtrack:pageEnd", lazyLoadImages)
+      $(window).on("guidedtrack:pageEnd", setDefaultImageSizes)
     </script>
   </body>
 </html>
