--- a/001-image-lazy-loading/index.html
+++ b/001-image-lazy-loading/index.html
@@ -23,6 +23,7 @@
     </div>
 
     <script>
+      // connects to this GT program: https://www.guidedtrack.com/programs/15045
       function setDefaultImageSizes(){
         let imgs = document.getElementsByTagName("img")
 
