--- a/001-image-lazy-loading/index.html
+++ b/001-image-lazy-loading/index.html
@@ -30,6 +30,10 @@
         for (let i=0; i<imgs.length; i++){
           let img = imgs[i]
           img.height = 500
+
+          img.onload = function(){
+            img.removeAttribute("height")
+          }
         }
       }
 
