--- a/001-image-lazy-loading/index.html
+++ b/001-image-lazy-loading/index.html
@@ -36,9 +36,11 @@
               let aspect = img.naturalWidth / img.naturalHeight
               let width = img.parentElement.getBoundingClientRect().width
               img.height = width / aspect
+              img.style.backgroundColor = "rgb(235, 235, 235)"
 
               img.onload = function(){
                 img.removeAttribute("height")
+                img.style.backgroundColor = "unset"
               }
             }
           }, 10)
