--- a/001-image-lazy-loading/index.html
+++ b/001-image-lazy-loading/index.html
@@ -22,32 +22,6 @@
       <div class="main"></div>
     </div>
 
-    <script>
-      // connects to this GT program: https://www.guidedtrack.com/programs/15045
-      function setDefaultImageSizes(){
-        let imgs = document.getElementsByTagName("img")
-
-        for (let i=0; i<imgs.length; i++){
-          let img = imgs[i]
-          
-          let interval = setInterval(function(){
-            if (img.naturalHeight > 0){
-              clearInterval(interval)
-              let aspect = img.naturalWidth / img.naturalHeight
-              let width = img.parentElement.getBoundingClientRect().width
-              img.height = width / aspect
-              img.style.backgroundColor = "rgb(235, 235, 235)"
-
-              img.onload = function(){
-                img.removeAttribute("height")
-                img.style.backgroundColor = "unset"
-              }
-            }
-          }, 10)
-        }
-      }
-
-      $(window).on("guidedtrack:pageEnd", setDefaultImageSizes)
-    </script>
+    <script src="gt-image-placeholders.js"></script>
   </body>
 </html>
