--- a/002-background-images/index.html
+++ b/002-background-images/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="https://www.guidedtrack.com/assets/guidedtrack.css">
     <style>
       body {
-        background: url("laura-adai-m9qo5k2xMs8-unsplash.jpg") center center;
+        background: url("https://guidedtrack-demos.vercel.app/002-background-images/laura-adai-m9qo5k2xMs8-unsplash.jpg") center center;
         background-size: auto;
       }
 
