--- a/005-meta-fb-pixel-custom-events/index.html
+++ b/005-meta-fb-pixel-custom-events/index.html
@@ -35,6 +35,7 @@
     </div>
 
     <!-- Facebook Pixel Code -->
+    <!-- prettier-ignore -->
     <script>
       !function(f,b,e,v,n,t,s)
       {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -59,12 +60,10 @@
     <script>
       $(window).on("alpha", (event, data) => {
         fbq("trackCustom", "josh-demo-alpha", data)
-        alert("Congratulations! You trigged the Alpha event!")
       })
 
       $(window).on("bravo", (event, data) => {
         fbq("trackCustom", "josh-demo-alpha", data)
-        alert("Congratulations! You trigged the Bravo event!")
       })
     </script>
   </body>
